Angular 19 migration & standalone

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "angular-archwizard",
-  "version": "8.0.0-develop",
+  "name": "ngx-archwizard",
+  "version": "19.0.0",
   "license": "MIT",
-  "description": "An Angular 9+ module containing a wizard component and its supporting components and directives",
+  "description": "An Angular 19+ module containing a wizard component and its supporting components and directives",
   "homepage": "https://github.com/madoar/angular-archwizard",
   "author": {
     "name": "Marc Arndt",
@@ -17,15 +17,9 @@
   },
   "keywords": [
     "angular",
-    "angular9",
-    "angular10",
-    "angular11",
-    "angular 9",
-    "angular 10",
-    "angular 11",
-    "ng9",
-    "ng10",
-    "ng11",
+    "angular19",
+    "angular 19",
+    "ng19",
     "ngx",
     "typescript",
     "wizard",
@@ -41,43 +35,49 @@
     "test": "ng test && ng test --tsConfig=tsconfig-noIvy.spec.json",
     "coverage": "ng test --no-watch --code-coverage",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build:lib": "ng build ngx-archwizard",
+    "publish:lib": "npm run build:lib && cd dist/ngx-archwizard && npm publish"
+  },
+  "peerDependencies": {
+    "@angular/common": "^19.0.0",
+    "@angular/core": "^19.0.0",
+    "@angular/forms": "^19.0.0",
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.1",
-    "@angular/cli": "~11.0.1",
-    "@angular/common": "^11.0.0",
-    "@angular/compiler": "^11.0.0",
-    "@angular/compiler-cli": "^11.0.0",
-    "@angular/core": "^11.0.0",
-    "@angular/forms": "^11.0.0",
-    "@angular/platform-browser": "^11.0.0",
-    "@angular/platform-browser-dynamic": "^11.0.0",
-    "@angular/router": "^11.0.0",
+    "@angular-devkit/build-angular": "^19.0.0",
+    "@angular/cli": "^19.0.0",
+    "@angular/common": "^19.0.0",
+    "@angular/compiler": "^19.0.0",
+    "@angular/compiler-cli": "^19.0.0",
+    "@angular/core": "^19.0.0",
+    "@angular/forms": "^19.0.0",
+    "@angular/platform-browser": "^19.0.0",
+    "@angular/platform-browser-dynamic": "^19.0.0",
+    "@angular/router": "^19.0.0",
     "@earshinov/extract-scss-variables": "~0.1.1",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^14.11.2",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
+    "@types/jasmine": "~5.1.0",
+    "@types/node": "^20.0.0",
+    "jasmine-core": "~5.0.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
     "karma-detect-browsers": "~2.3.3",
     "karma-firefox-launcher": "~2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "karma-safari-launcher": "~1.0.0",
-    "ng-packagr": "^11.0.2",
+    "ng-packagr": "^19.0.0",
     "protractor": "~7.0.0",
-    "rxjs": "~6.6.3",
-    "sass": "^1.29.0",
-    "ts-node": "~9.0.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.0.3",
-    "zone.js": "~0.10.3"
+    "rxjs": "^7.8.0",
+    "sass": "^1.70.0",
+    "ts-node": "~10.9.0",
+    "typescript": ">=5.5 <5.9",
+    "zone.js": "~0.15.0"
   },
   "dependencies": {
-    "tslib": "^2.0.0"
+    "tslib": "^2.6.0"
   }
 }
