--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "",
   "projects": {
-    "angular-archwizard": {
+    "ngx-archwizard": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "library",
@@ -39,5 +39,7 @@
       }
     }
   },
-  "defaultProject": "angular-archwizard"
+  "cli": {
+    "analytics": false
+  }
 }
