--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "build-css": "sass ./dist/styles/archwizard.scss ./dist/styles/archwizard.css",
     "test": "ng test && ng test --tsConfig=tsconfig-noIvy.spec.json",
     "coverage": "ng test --no-watch --code-coverage",
-    "lint": "ng lint",
+    "lint": "eslint \"src/**/*.ts\" --fix",
     "e2e": "ng e2e",
     "build:lib": "ng build ngx-archwizard",
     "publish:lib": "npm run build:lib && cd dist/ngx-archwizard && npm publish"
@@ -56,9 +56,18 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@angular-eslint/builder": "^19.0.0",
+    "@angular-eslint/eslint-plugin": "^19.0.0",
+    "@angular-eslint/eslint-plugin-template": "^19.0.0",
+    "@angular-eslint/schematics": "^19.0.0",
+    "@angular-eslint/template-parser": "^19.0.0",
     "@earshinov/extract-scss-variables": "~0.1.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-import": "^2.29.1",
     "jasmine-core": "~5.0.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.0",
