--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,11 @@
           "options": {
             "main": "src/test.ts",
             "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.conf.js"
+            "karmaConfig": "karma.conf.js",
+            "polyfills": ["zone.js", "zone.js/testing"],
+            "styles": [],
+            "scripts": [],
+            "assets": []
           }
         },
         "lint": {
