--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -11,6 +11,7 @@
     ]
   },
   "angularCompilerOptions": {
+    "compilationMode": "partial",
     "strictMetadataEmit": true,
     "enableResourceInlining": true
   },
